updated mux to way

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 MEDIA_PATH=/file-server/uploads
+
+CIPHER_KEY=
+
+# WAY DB CONFIG
+WAY_DB_TYPE=postgres
+WAY_DB_HOST=db.fileserver.orb.local
+WAY_DB_PORT=5432
+WAY_DB_NAME=fileserver
+WAY_DB_USER=fileserver
+WAY_DB_PASSWORD=fileserver
